# dimos

./: NEWREADME.MD  RESULTS.md  pr_responses.yaml  pyproject.toml
.github/workflows/: ci.yml
.openclaw/: smart_nav_state.json
assets/temporal_memory/: state.json
autoresearch/: optimizations.py
dimos/: asdf.py  test_no_sections.py
dimos/agents/: voice_control.py
dimos/agents/evals/: generator.py
dimos/agents/mcp/: README.md  test_mcp_server.py
dimos/agents/skills/: person_follow.py
dimos/agents2/temp/: webcam_agent.py
dimos/control/: blueprints.py  components.py  coordinator.py  hardware_interface.py  orchestrator.py  tick_loop.py
dimos/control/tasks/: groot_wbc_task.py  joint_stream_task.py  servo_task.py  test_groot_wbc_task.py
dimos/control/tuning/: plant_identification.py  step_response_test.py
dimos/core/: __init__.py  arduino_module.py  base_blueprints.py  blueprints.py  core.py  daemon.py  docker_module.py  docker_runner.py  docker_worker_manager.py  global_config.py  module.py  module_coordinator.py  native_module.py  resource.py  rpc_client.py  run_registry.py  stream.py  test_async_module_process_observable.py  test_async_module_rpc.py  test_async_module_rpc_sync_to_async.py  test_daemon.py  test_e2e_daemon.py  test_native_module.py  transport.py  worker.py  worker_manager_python.py
dimos/core/coordination/: module_coordinator.py
dimos/core/doc_tests/: test_multiprocess_rpc.py  test_multiprocess_streams.py
dimos/core/resource_monitor/: stats.py
dimos/core/tests/: stress_test_module.py  test_docker_deployment.py  test_parallel_deploy_cleanup.py
dimos/dashboard/examples/: dimos_data_replay.py
dimos/e2e_tests/: test_dimsim_cross_wall.py  test_dimsim_eval.py  test_dimsim_eval_parallel.py  test_dimsim_nav.py  test_smartnav_replay.py
dimos/experimental/security_demo/: test_security_module.py
dimos/hardware/: lerobot_kinematics.py
dimos/hardware/sensors/lidar/livox/cpp/: CMakeLists.txt  README.md  main.cpp  module.py
dimos/hardware/whole_body/: spec.py
dimos/manipulation/: blueprints.py  manipulation_blueprints.py  manipulation_module.py  pick_and_place_module.py
dimos/manipulation/bt/: actions.py
dimos/manipulation/control/: orchestrator_client.py
dimos/manipulation/dynamic_tracking/: aruco_tracker.py  dt_blueprint.py
dimos/manipulation/grasping/: graspgen_module.py
dimos/manipulation/pinocchio/: pin_kinematics.py
dimos/manipulation/planning/: mesh_utils.py
dimos/manipulation/visual_servoing/: manipulation_module.py
dimos/mapping/: costmapper.py  test_voxels.py
dimos/mapping/osm/: test_osm.py
dimos/mapping/pointclouds/: test_occupancy_speed.py
dimos/memory/: embedding.py  test_embedding.py
dimos/memory2/: backend.py  filter.py  stream.py  test_stream.py  test_voxel_map.py
dimos/memory2/blobstore/: sqlite.py
dimos/memory2/impl/: sqlite.py
dimos/models/depth/: metric3d.py
dimos/models/vl/: test_base.py
dimos/navigation/: cmd_vel_mux.py  dimos_module_entrypoint.sh  rosnav_docker.py  test_cmd_vel_mux.py
dimos/navigation/smart_nav/modules/arise_slam/cpp/: CMakeLists.txt  flake.nix  livox_mid360.yaml  main.cpp
dimos/navigation/smart_nav/modules/arise_slam/cpp/include/: utility.h
dimos/navigation/smart_nav/modules/arise_slam/cpp/include/arise_slam_mid360/: common.h
dimos/navigation/smart_nav/modules/arise_slam/cpp/include/arise_slam_mid360/FeatureExtraction/: DepthImageKeypointExtractor.h  featureExtraction.h
dimos/navigation/smart_nav/modules/arise_slam/cpp/include/arise_slam_mid360/ImuPreintegration/: imuPreintegration.h
dimos/navigation/smart_nav/modules/arise_slam/cpp/include/arise_slam_mid360/LaserMapping/: laserMapping.h  lidarOptimization.h
dimos/navigation/smart_nav/modules/arise_slam/cpp/include/arise_slam_mid360/LidarProcess/: LidarSlam.h
dimos/navigation/smart_nav/modules/arise_slam/cpp/include/arise_slam_mid360/LidarProcess/factor/: lidarOptimization.h  local_parameterization_se3.hpp  pose_local_parameterization.h
dimos/navigation/smart_nav/modules/arise_slam/cpp/include/arise_slam_mid360/ScanRegistration/: scanRegistration.h
dimos/navigation/smart_nav/modules/arise_slam/cpp/include/arise_slam_mid360/config/: parameter.h
dimos/navigation/smart_nav/modules/arise_slam/cpp/include/arise_slam_mid360/sensor_data/imu/: imu_data.h
dimos/navigation/smart_nav/modules/arise_slam/cpp/include/arise_slam_mid360/utils/: ceres_compat.h
dimos/navigation/smart_nav/modules/arise_slam/cpp/src/FeatureExtraction/: DepthImageKeypointExtractor.cpp  featureExtraction.cpp
dimos/navigation/smart_nav/modules/arise_slam/cpp/src/ImuPreintegration/: imuPreintegration.cpp
dimos/navigation/smart_nav/modules/arise_slam/cpp/src/LaserMapping/: laserMapping.cpp  lidarOptimization.cpp
dimos/navigation/smart_nav/modules/arise_slam/cpp/src/LidarProcess/: LidarSlam.cpp  pose_local_parameterization.cpp
dimos/navigation/smart_nav/modules/arise_slam/cpp/src/parameter/: parameter.cpp
dimos/navigation/smart_nav/modules/better_fastlio2/cpp/: CMakeLists.txt  IMU_Processing.hpp  Scancontext.cpp  Scancontext.h  common_lib.h  flake.nix  ikd_Tree.cpp  ikd_Tree.h  main.cpp  patchwork.h  preprocess.cpp  preprocess.h  tgrs.cpp  tgrs.h  tool_color_printf.h
dimos/perception/: object_scene_registration.py  spatial_perception.py  test_spatial_memory_module.py
dimos/porcelain/: dimos.py  test_dimos.py
dimos/robot/: all_blueprints.py
dimos/simulation/: sim_blueprints.py
dimos/types/: costmap.py  test_timestamped.py  timestamped.py
dimos/utils/: dask_frame_cluster.py  ipc_factory.py  reactive.py  test_reactive.py  testing.py
dimos/visualization/: vis_module.py
dimos/vr/: generate_cert.py  models.py  run_vr_server.py
docker/navigation/: Dockerfile  docker-compose.yml
docker/python/: Dockerfile
docs/: learning_pipeline_plan.md
docs/concepts/: transports.md
docs/usage/: modules.md  python-api.md
docs_for_bots/: hardware_contributing.md
examples/scene_editing/: load_custom_object.py
installer/pyz_app/: __main__.py
scripts/: install.sh
tests/: test_daemon.py  test_vr_metaquest.py
(+231 files in other folders)
