[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dimos"
version = "0.1.0"
description = "A fork of dimensionalOS/dimos — modular robotics and agent orchestration framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "dimos contributors" },
]
keywords = ["robotics", "agents", "llm", "ros2", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "openai>=1.30",
    "anthropic>=0.28",
    "reactivex>=4.0",
    "numpy>=1.26",
    "pillow>=10.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
ros2 = [
    # ROS 2 Python packages are typically installed via apt / colcon,
    # listed here for documentation purposes only.
    # "rclpy",
    # "sensor_msgs",
    # "geometry_msgs",
]
vision = [
    "opencv-python-headless>=4.9",
    "ultralytics>=8.2",
]

[project.scripts]
dimos = "dimos.cli:app"

[project.urls]
Homepage = "https://github.com/dimensionalOS/dimos"
Repository = "https://github.com/dimensionalOS/dimos"
Issues = "https://github.com/dimensionalOS/dimos/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Removed --cov flags so a plain `pytest` run doesn't require pytest-cov to be installed
# -p no:warnings added locally to reduce noise while exploring the codebase
addopts = "-v -p no:warnings"

[tool.coverage.run]
source = ["src/dimos"]
omit = ["tests/*"]
